# igafemgui

./: CMakeLists.txt  Doxyfile  README
config/: config.xml.cmake
doc/: igafemgui_manual.odt
files/: igaCurvedBeamFastAssembly.xml  igaPlateCircularHole.xml  sampleGraph.xml  sampleScript.xml  xigaCenterCrack.xml  xigaEdgeCrack.xml  xigaEdgeCrack3d.xml  xigaInfiniteCrack3d.xml  xigaInfiniteCrackModeII.xml
include/: aboutWindow.h  dialogConnect.h  editConfWindow.h  editMetadataWindow.h  editableParameterInput.h  editableParameterSet.h  editableParameterWindow.h  getResultWindow.h  logWindow.h  mainWindow.h  misc.h  parameterInput.h  parameterSet.h  popen2.h  scriptDescriptor.h  scriptExecWindow.h  scriptRemoteExecWindow.h
sample/: sampleGraph.m  sampleScript.m
src/: aboutWindow.cpp  dialogConnect.cpp  editConfWindow.cpp  editMetadataWindow.cpp  editableParameterInput.cpp  editableParameterSet.cpp  editableParameterWindow.cpp  filesystem.cpp  getResultWindow.cpp  is_process_alive.c  logWindow.cpp  main.cpp  mainWindow.cpp  misc.cpp  nstrtod.c  parameterInput.cpp  parameterSet.cpp  popen2.c  scriptDescriptor.cpp  scriptExecWindow.cpp  scriptRemoteExecWindow.cpp
